--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
   <body>
     <div id="root"></div>
   </body>
-  <script src="./src/index.js" type="text/javascript"></script>
+  <script src="./index.js" type="text/javascript"></script>
 </html>
