使用bulma样式框架

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
-    <link href="./public/bootstrap4.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>preact sample</title>
   </head>
   <body>
